<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_apps_portfolio_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger_app">BUILD IT BIGGER</string>
    <string name="xyz_reader_app">XYZ READER</string>
    <string name="capstone_app">CAPSTONE: MY OWN APP</string>
</resources>
