<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#80DEEA"
    tools:context="com.fitstsputnik.myappportfolio.MainActivity">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:id="@+id/portfolio_title"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/my_apps_portfolio_title"
               android:layout_marginBottom="30dp"
               android:gravity="center"
               android:textColor="@android:color/black"
               android:textSize="25sp"/>

           <Button
               android:id="@+id/button_spotify_streamer"
               android:layout_below="@id/portfolio_title"
               android:text="@string/spotify_streamer"
               style="@style/style_app_button"
               />
           <Button
               android:id="@+id/button_scores_app"
               android:layout_below="@id/button_spotify_streamer"
               android:layout_centerInParent="true"
               android:text="@string/scores_app"
               style="@style/style_app_button"
               />
           <Button
               android:id="@+id/button_library_app"
               android:layout_below="@id/button_scores_app"
               android:layout_centerInParent="true"
               android:text="@string/library_app"
               style="@style/style_app_button"
               />
           <Button
               android:id="@+id/button_build_it_bigger_app"
               android:layout_below="@id/button_library_app"
               android:text="@string/build_it_bigger_app"
               style="@style/style_app_button"/>
           <Button
               android:id="@+id/button_xyz_reader_app"
               android:layout_below="@id/button_build_it_bigger_app"
               android:text="@string/xyz_reader_app"
               android:layout_marginBottom="16dp"
               style="@style/style_app_button"
               />
           <Button
               android:id="@+id/button_capstone_app"
               style="@style/style_app_button"
               android:layout_below="@id/button_xyz_reader_app"
               android:text="@string/capstone_app"
               android:textColor="@android:color/white"
               android:background="#FF1744"
               />
       </RelativeLayout>
   </ScrollView>
</RelativeLayout>
